Fixed contact info alignment and stylings. Added classnames and fixed some stylings to two-card components.

--- a/src/app/[locale]/styles/partials/two-card.scss
+++ b/src/app/[locale]/styles/partials/two-card.scss
@@ -1,6 +1,3 @@
-// @use "../variables.scss" as vars;
-// @import "bulma/sass/utilities/initial-variables";
-
 .twoCard {
   display: flex;
   flex-wrap: wrap; // Allow wrapping on mobile
@@ -27,7 +24,7 @@
 }
 
 .card-text {
-  flex: 1 1 100%; // Full width on mobile
+  flex: 1 1 100%;
   padding: 2rem;
   text-align: left;
   width: auto;
@@ -36,37 +33,9 @@
     flex: 1 1 40%; // Slightly less than 50% to account for padding/gap
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
 }
 
-// .twoCard {
-//   display: flex;
-//   flex-flow: row wrap;
-//   margin: 0 auto;
-// }
-
-// .cardImage {
-//   display: flex;
-//   margin-bottom: 0;
-//   width: auto;
-
-//   @media screen and (min-width: $tablet) {
-//     width: 50%;
-//   }
-// }
-
-// .card-text {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   margin-bottom: 0;
-//   padding: 2rem;
-//   text-align: center;
-//   width: auto;
-
-//   @media screen and (min-width: $tablet) {
-//     width: 50%;
-//   }
-// }
+.cardSection {
+  margin-top: 2em;
+}
